--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ pagination_dir: page
 include: null
 exclude: null
 ignore: null
-theme: icarus
+theme: hexo-theme-icarus
 deploy:
   type: git
   repo: https://github.com/EdisonYin/EdisonYin.github.io.git
